[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-nomic>=1.0.1",
    "langchain-ollama>=1.1.0",
    "langchain-openrouter>=0.2.3",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
